part1/1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes:
        - name: shared-image
          emptyDir: {}
      containers:
        - name: hash-reader
          image: laurihakala/hash-reader:81d8de955268

          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
              resources:
        - name: hash-writer
          image: laurihakala/hash-writer:f8048e5c4dc8
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
